add ols/current site folder, some change

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
                     &nbsp;
                 </div>
                 <div class='column two-thirds'>
-                    <h2>High Quality Photo Manipulation</h2>
+                    <h2>For everyone teachers and students</h2>
                     <p>
-                        GIMP provides the tools needed for high quality image manipulation.
-                        From retouching to restoring to creative composites, the only limit is your imagination.
+                        Teach your students a free software with no worry about license purchase.
+                        They can install the same version at home and continue using it after leaving school.
                     </p>
                 </div>
             </div>
@@ -169,9 +169,22 @@
         <div class='container'>
             <div class='row clearfix'>
                 <div class='column two-thirds'>
-                    <h2>Original Artwork Creation</h2>
+                    <h2>Who is FreeCAD for?</h2>
                     <p>
-                        GIMP gives artists the power and flexibility to transform images into truly unique creations.
+                        The <b>home user/hobbyist</b> : Got yourself a project you want to build, have built, or 3D printed ?
+                        Model it in FreeCAD. No previous CAD experience required.
+                        Our community will help you get the hang of it quickly!
+                    </p>
+                    <p>
+                        The <b>experienced CAD user</b>. If you use commercial CAD or BIM modeling software at work, you will find similar tools and workflow among the many <a href="wiki/?title=Workbenches">workbenches</a> of FreeCAD.
+                    </p>
+                    <p>
+                        The <b>programmer</b>. Almost all of FreeCAD\'s functionality is accessible to <a href="https://en.wikipedia.org/wiki/Python_%28programming_language%29">Python</a>.
+                        You can easily extend FreeCAD\'s functionality, automatize it with scripts, build your own modules or even embed FreeCAD in your own application.
+                    </p>
+                    <p>
+                        The <b>educator</b>. Teach your students a free software with no worry about license purchase.
+                        They can install the same version at home and continue using it after leaving school.
                     </p>
                 </div>
                 <div class='column third'>
@@ -189,7 +202,7 @@
                     &nbsp;
                 </div>
                 <div class='column two-thirds'>
-                    <h2>Graphic Design Elements</h2>
+                    <h2>FEM Design</h2>
                     <p>
                         GIMP is a high quality application for producing icons,
                         graphical design elements, and art for user interface components and mockups.
@@ -205,7 +218,7 @@
             <div class='row clearfix'>
 
                 <div class='column two-thirds'>
-                    <h2>Programming Algorithms</h2>
+                    <h2>Architectural Design</h2>
                     <p>
                         GIMP is a high quality framework for scripted image manipulation, 
                         with multi-language support such as C, C++, Perl, Python, Scheme, and more!
@@ -274,9 +287,11 @@
                 <div class='column full'>
                     <h3>Extensibility & Flexibility</h3>
                     <p>
-                        GIMP provides extensibility through integration
-                        with many programming languages including Scheme, Python, Perl, 
-                        and more.
+                        FreeCAD also runs as a command line application, with low memory footprint.
+                        In command line mode, FreeCAD runs without its interface, but with all its geometry tools.
+                        It can be, for example, used as server to produce content for other applications.
+                        FreeCAD can be imported as a Python module, inside other applications that can run python scripts, or in a python console.
+                        Like in console mode, the interface part of FreeCAD is unavailable, but all geometry tools are accessible.
                     </p>
                     <p>
                         The result is a high level of customization as demonstrated
