--- a/index.html
+++ b/index.html
@@ -109,6 +109,11 @@
                 <div class='column half'>
                     <h2>The Free &amp; Open Source Parametric 3D CAD Modeler</h2>
                     <p>
+                        FreeCAD is a parametric 3D modeler made primarily to design real-life objects of any size. 
+                        <a href="http://en.wikipedia.org/wiki/Parametric_feature_based_modeler">Parametric modeling</a> allows you to easily modify your design by going back into your model history and changing its parameters.
+                        FreeCAD is open-source and highly customizable, scriptable and extensible.
+                    </p>
+                    <p>
                         This is the official website of the <strong>FreeCAD</strong>.
                     </p>
                     <p>
@@ -156,8 +161,16 @@
                 <div class='column two-thirds'>
                     <h2>For everyone teachers and students</h2>
                     <p>
-                        Teach your students a free software with no worry about license purchase.
-                        They can install the same version at home and continue using it after leaving school.
+                        This is the official website of the <strong>FreeCAD</strong>.
+                    </p>
+                    <p>
+                        It is the Free and Open Source, cross-platform parametric 3D CAD modeler available for
+                        GNU/Linux, OS X, Windows and more.
+                    </p>
+                    <p>
+                        You will find information here about downloading, installing, using, and enhancing it.
+                        We try to provide as much information about the FreeCAD community and related projects as possible.
+                        Grab a properly chilled beverage and enjoy...
                     </p>
                 </div>
             </div>
