--- a/index.html
+++ b/index.html
@@ -110,20 +110,11 @@
                     <h2>The Free &amp; Open Source Parametric 3D CAD Modeler</h2>
                     <p>
                         FreeCAD is a parametric 3D modeler made primarily to design real-life objects of any size. 
-                        <a href="http://en.wikipedia.org/wiki/Parametric_feature_based_modeler">Parametric modeling</a> allows you to easily modify your design by going back into your model history and changing its parameters.
+                        <a href="http://en.wikipedia.org/wiki/Parametric_feature_based_modeler">Parametric modeling</a> allows you to easily modify your design by going back into your model history and changing its parameters.<br>
                         FreeCAD is open-source and highly customizable, scriptable and extensible.
                     </p>
                     <p>
-                        This is the official website of the <strong>FreeCAD</strong>.
-                    </p>
-                    <p>
-                        It is the Free and Open Source, cross-platform parametric 3D CAD modeler available for
-                        GNU/Linux, OS X, Windows and more.
-                    </p>
-                    <p>
-                        You will find information here about downloading, installing, using, and enhancing it.
-                        We try to provide as much information about the FreeCAD community and related projects as possible.
-                        Grab a properly chilled beverage and enjoy...
+                        FreeCAD is multiplatfom (Windows, Mac and Linux), and reads and writes many open file formats such as STEP, IGES, STL, SVG, DXF, OBJ, IFC, DAE and many others. 
                     </p>
                 </div>
 
@@ -159,18 +150,11 @@
                     &nbsp;
                 </div>
                 <div class='column two-thirds'>
-                    <h2>For everyone teachers and students</h2>
+                    <h2>For home user and hobbyist</h2>
                     <p>
-                        This is the official website of the <strong>FreeCAD</strong>.
-                    </p>
-                    <p>
-                        It is the Free and Open Source, cross-platform parametric 3D CAD modeler available for
-                        GNU/Linux, OS X, Windows and more.
-                    </p>
-                    <p>
-                        You will find information here about downloading, installing, using, and enhancing it.
-                        We try to provide as much information about the FreeCAD community and related projects as possible.
-                        Grab a properly chilled beverage and enjoy...
+                        Got yourself a project you want to build, have built, or 3D printed ?
+                        Model it in FreeCAD. No previous CAD experience required.
+                        Our community will help you get the hang of it quickly!
                     </p>
                 </div>
             </div>
@@ -182,22 +166,44 @@
         <div class='container'>
             <div class='row clearfix'>
                 <div class='column two-thirds'>
-                    <h2>Who is FreeCAD for?</h2>
+                    <h2>For teachers and students</h2>
                     <p>
-                        The <b>home user/hobbyist</b> : Got yourself a project you want to build, have built, or 3D printed ?
-                        Model it in FreeCAD. No previous CAD experience required.
-                        Our community will help you get the hang of it quickly!
-                    </p>
-                    <p>
-                        The <b>experienced CAD user</b>. If you use commercial CAD or BIM modeling software at work, you will find similar tools and workflow among the many <a href="wiki/?title=Workbenches">workbenches</a> of FreeCAD.
-                    </p>
-                    <p>
-                        The <b>programmer</b>. Almost all of FreeCAD\'s functionality is accessible to <a href="https://en.wikipedia.org/wiki/Python_%28programming_language%29">Python</a>.
-                        You can easily extend FreeCAD\'s functionality, automatize it with scripts, build your own modules or even embed FreeCAD in your own application.
-                    </p>
-                    <p>
-                        The <b>educator</b>. Teach your students a free software with no worry about license purchase.
+                        Teach your students a free software with no worry about license purchase.
                         They can install the same version at home and continue using it after leaving school.
+                    </p>
+                </div>
+                <div class='column third'>
+                    &nbsp;
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id='cap-photos2' class='cap'>
+        <div class='container'>
+            <div class='row clearfix'>
+                <div class='column third'>
+                    &nbsp;
+                </div>
+                <div class='column two-thirds'>
+                    <h2>For experienced CAD user.</h2>
+                    <p>
+                        If you use commercial CAD or BIM modeling software at work, you will find similar tools and workflow among the many <a href="wiki/?title=Workbenches">workbenches</a> of FreeCAD.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section id='cap-painting2' class='cap'>
+        <div class='container'>
+            <div class='row clearfix'>
+                <div class='column two-thirds'>
+                    <h2>For programmer</h2>
+                    <p>
+                        Almost all of FreeCAD\'s functionality is accessible to <a href="https://en.wikipedia.org/wiki/Python_%28programming_language%29">Python</a>.
+                        You can easily extend FreeCAD\'s functionality, automatize it with scripts, build your own modules or even embed FreeCAD in your own application.
                     </p>
                 </div>
                 <div class='column third'>
@@ -314,7 +320,7 @@
             </div>
         </div>
         <div class='container'>
-            <img id='blocks' src='/images/frontpage/blocks.svg' alt='Building Blocks Graphic' />
+            <img id='blocks' src='../images/frontpage/blocks.svg' alt='Building Blocks Graphic' />
         </div>
     </section>
 
