--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <meta itemprop='image' content='http://www.gimp.org/images/frontpage/wilber-big.png' />
 
         <meta property='og:url' content='http://freecadweb.org/' />
-        <meta property='og:title' content='GIMP' />
+        <meta property='og:title' content='FreeCAD' />
         <meta property='og:image' content='http://www.gimp.org/images/frontpage/wilber-big.png' />
         <meta property='og:type' content='website' />
         <meta property='og:site_name' content='FreeCAD' />
@@ -143,7 +143,7 @@
         </div>
     </section>
 
-    <section id='cap-photos' class='cap'>
+    <section id='cap-hobbyist' class='cap'>
         <div class='container'>
             <div class='row clearfix'>
                 <div class='column third'>
@@ -162,7 +162,7 @@
     </section>
 
 
-    <section id='cap-painting' class='cap'>
+    <section id='cap-teacher' class='cap'>
         <div class='container'>
             <div class='row clearfix'>
                 <div class='column two-thirds'>
@@ -179,7 +179,7 @@
         </div>
     </section>
 
-    <section id='cap-photos2' class='cap'>
+    <section id='cap-experienced' class='cap'>
         <div class='container'>
             <div class='row clearfix'>
                 <div class='column third'>
@@ -196,7 +196,7 @@
     </section>
 
 
-    <section id='cap-painting2' class='cap'>
+    <section id='cap-programmer' class='cap'>
         <div class='container'>
             <div class='row clearfix'>
                 <div class='column two-thirds'>
