--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="/images/logo-freecad-16.png" type="image/png" />
         <link rel="stylesheet" type="text/css" href="theme/css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="theme/css/grid.css" />
-        <link rel="stylesheet" type="text/css" href="theme/css/gimp.css" />
+        <link rel="stylesheet" type="text/css" href="theme/css/freecad.css" />
         <link rel="stylesheet" type="text/css" href="theme/css/font-awesome-4.5.0/css/font-awesome.min.css" />
 
 
@@ -20,11 +20,11 @@
 
         <meta itemprop='url' content='http://freecadweb.org/' />
         <meta itemprop='name' content='FreeCAD - An Open Source 3D Modeler Program' />
-        <meta itemprop='image' content='http://www.gimp.org/images/frontpage/wilber-big.png' />
+        <meta itemprop='image' content='https://github.com/wood-galaxy/Homepage/blob/gh-pages/images/freecad-big.png' />
 
         <meta property='og:url' content='http://freecadweb.org/' />
         <meta property='og:title' content='FreeCAD' />
-        <meta property='og:image' content='http://www.gimp.org/images/frontpage/wilber-big.png' />
+        <meta property='og:image' content='https://github.com/wood-galaxy/Homepage/blob/gh-pages/images/freecad-big.png' />
         <meta property='og:type' content='website' />
         <meta property='og:site_name' content='FreeCAD' />
 
@@ -412,7 +412,7 @@
 
     </div>
 
-    <script async src="/js/push-menu.js"></script>
+    <script async src="/theme/js/push-menu.js"></script>
 
 </body>
 </html>
