--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <nav id="menu">
             <ul>
-                <li id='freecad-home'><a href="/"><img src='images/logo-freecad.png' id='menuFreeCAD' style='width:25px;height:20px;' alt='FreeCAD Logo'> FreeCAD</a></li>
+                <li id='freecad-home'><a href="/"><img src='theme/images/logo-freecad.png' id='menuFreeCAD' style='width:25px;height:20px;' alt='FreeCAD Logo'> FreeCAD</a></li>
                 <li><a href="wiki/?title=Main_Page"><i class="fa fa-download"></i> Download</a></li>
                 <li><a href="news/"><i class="fa fa-newspaper-o"></i> News</a></li>
                   <li><a href="about/">About <span class="caps">FreeCAD</span></a></li>
@@ -50,7 +50,7 @@
 
         <div id='navstrip' class='nav-down'>
             <a href="/" class='navfive'>
-                <img id='freecad-logo' src="images/logo-freecad.png" style="width:25px;height:20px;" alt='Wilber Icon'><br/>
+                <img id='freecad-logo' src="theme/images/logo-freecad.png" style="width:25px;height:20px;" alt='Wilber Icon'><br/>
                 FreeCAD
             </a>
             <a href="/news/" class='navfive'>
@@ -79,7 +79,7 @@
     <div class="container">
                 <div class="intro row">
 
-                    <img id='WilberLogo' src="images/logo-freecad.png" alt="GIMP Wilber" width='200' height='150'/>
+                    <img id='WilberLogo' src="theme/images/freecad-big.png" alt="GIMP Wilber" width='200' height='150'/>
                     <h1>
                         <a href="/">FreeCAD</a>
                     </h1>
@@ -277,23 +277,10 @@
 
             <div class='row clearfix'>
                 <div class='column third'>
-                    <a href="http://www.scribus.net/" title="Scribus">
-                        <img src="/images/frontpage/200px-Scribus_logo.svg.png" alt="Scribus Logo" />
-                    </a>
-                    <h4><a href="http://www.scribus.net/" title="Scribus">Scribus</a></h4>
-                </div>
-
-                <div class='column third'>
                     <a href="https://inkscape.org" title="Inkscape">
-                        <img src="/images/frontpage/Inkscape_Logo.svg.png" alt="Inkscape Logo" />
+                        <img src="theme/images/Inkscape_Logo.svg.png" alt="Inkscape Logo" />
                     </a>
                     <h4><a href="https://inkscape.org" title="Inkscape">Inkscape</a></h4>
-                </div>
-                <div class='column third'>
-                    <a href="http://www.selapa.net/swatchbooker/" title="SwatchBooker">
-                        <img src="/images/frontpage/swatchbooker.png" alt="SwatchBooker Logo" />
-                    </a>
-                    <h4><a href="http://www.selapa.net/swatchbooker/">SwatchBooker</a></h4>
                 </div>
             </div>
         </div>
@@ -320,7 +307,7 @@
             </div>
         </div>
         <div class='container'>
-            <img id='blocks' src='../images/frontpage/blocks.svg' alt='Building Blocks Graphic' />
+            <img id='blocks' src='theme/images/blocks.svg' alt='Building Blocks Graphic' />
         </div>
     </section>
 
@@ -351,7 +338,7 @@
                 <div class="row clearfix">
                     <div class="column third">
                         <ul class="nav-bottom">
-                            <li id='nav-btm-gimp-home'><a href="/"><img src='/images/wilbericon.svg' style='width:25px;height:20px;' id='footerWilber' alt='Tiny Wilber'> GIMP</a></li>
+                            <li id='nav-btm-gimp-home'><a href="/"><img src='theme/images/freecad.svg' style='width:25px;height:20px;' id='footerWilber' alt='Tiny Wilber'> FreeCAD</a></li>
                             <li id="nav-btm-downloads"><a href="/downloads/"><i class="fa fa-download fa-fw"></i> Download</a></li>
                             <li id="nav-btm-news"><a href="/news/"><i class="fa fa-newspaper-o fa-fw"></i> News</a></li>
                         </ul>
@@ -412,7 +399,7 @@
 
     </div>
 
-    <script async src="/theme/js/push-menu.js"></script>
+    <script async src="theme/js/push-menu.js"></script>
 
 </body>
 </html>
