--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>FreeCAD - An opensource 3D Modeler</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="/images/logo-freecad-16.png" type="image/png" />
+        <link rel="icon" href="theme/images/logo-freecad-16.png" type="image/png" />
         <link rel="stylesheet" type="text/css" href="theme/css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="theme/css/grid.css" />
         <link rel="stylesheet" type="text/css" href="theme/css/freecad.css" />
@@ -20,11 +20,11 @@
 
         <meta itemprop='url' content='http://freecadweb.org/' />
         <meta itemprop='name' content='FreeCAD - An Open Source 3D Modeler Program' />
-        <meta itemprop='image' content='https://github.com/wood-galaxy/Homepage/blob/gh-pages/images/freecad-big.png' />
+        <meta itemprop='image' content='https://github.com/wood-galaxy/Homepage/blob/gh-pages/theme/images/freecad-big.png' />
 
         <meta property='og:url' content='http://freecadweb.org/' />
         <meta property='og:title' content='FreeCAD' />
-        <meta property='og:image' content='https://github.com/wood-galaxy/Homepage/blob/gh-pages/images/freecad-big.png' />
+        <meta property='og:image' content='https://github.com/wood-galaxy/Homepage/blob/gh-pages/theme/images/freecad-big.png' />
         <meta property='og:type' content='website' />
         <meta property='og:site_name' content='FreeCAD' />
 
@@ -35,14 +35,14 @@
         <nav id="menu">
             <ul>
                 <li id='freecad-home'><a href="/"><img src='theme/images/logo-freecad.png' id='menuFreeCAD' style='width:25px;height:20px;' alt='FreeCAD Logo'> FreeCAD</a></li>
-                <li><a href="wiki/?title=Main_Page"><i class="fa fa-download"></i> Download</a></li>
-                <li><a href="news/"><i class="fa fa-newspaper-o"></i> News</a></li>
-                  <li><a href="about/">About <span class="caps">FreeCAD</span></a></li>
-                  <li><a href="docs/">Documentation</a></li>
-                  <li><a href="develop/">Get&nbsp;Involved</a></li>
-                  <li><a href="tutorials/">Tutorials</a></li>
+                <li><a href="http://freecadweb.org/wiki/?title=Download"><i class="fa fa-download"></i> Download</a></li>
+                <li><a href="http://forum.freecadweb.org/"><i class="fa fa-newspaper-o"></i> Forum</a></li>
+                  <li><a href="http://freecadweb.org/wiki/?title=About_FreeCAD">About <span class="caps">FreeCAD</span></a></li>
+                  <li><a href="http://freecadweb.org/wiki/?title=Main_Page">Documentation</a></li>
+                  <li><a href="http://freecadweb.org/wiki/?title=Help_FreeCAD">Get&nbsp;Involved</a></li>
+                  <li><a href="http://freecadweb.org/wiki/?title=Tutorials">Tutorials</a></li>
 
-                <li><a href="donating/" style="color:#f57900;"><i class="fa fa-money"></i> Donate</a></li>
+                <li><a href="http://freecadweb.org/wiki/?title=Donate" style="color:#f57900;"><i class="fa fa-money"></i> Donate</a></li>
 
             </ul>
             <i class="fa fa-chevron-up" id='nav-up'></i>
@@ -50,18 +50,18 @@
 
         <div id='navstrip' class='nav-down'>
             <a href="/" class='navfive'>
-                <img id='freecad-logo' src="theme/images/logo-freecad.png" style="width:25px;height:20px;" alt='Wilber Icon'><br/>
+                <img id='wilber-tiny' src="theme/images/freecad.svg" style="width:20px;height:20px;" alt='Wilber Icon'><br/>
                 FreeCAD
             </a>
-            <a href="/news/" class='navfive'>
+            <a href="http://forum.freecadweb.org/" class='navfive'>
                 <i class="fa fa-newspaper-o" ></i><br/>
-                News
+                Forum
             </a>
-            <a href="/docs/" class='navfive'>
+            <a href="http://freecadweb.org/wiki/?title=Main_Page" class='navfive'>
                 <i class="fa fa-book" ></i><br/>
                 Docs
             </a>
-            <a href="/tutorials/" class='navfive'>
+            <a href="http://freecadweb.org/wiki/?title=Tutorials" class='navfive'>
                 <i class="fa fa-graduation-cap" ></i><br/>
                 Tutorials
             </a>
@@ -339,20 +339,20 @@
                     <div class="column third">
                         <ul class="nav-bottom">
                             <li id='nav-btm-gimp-home'><a href="/"><img src='theme/images/freecad.svg' style='width:25px;height:20px;' id='footerWilber' alt='Tiny Wilber'> FreeCAD</a></li>
-                            <li id="nav-btm-downloads"><a href="/downloads/"><i class="fa fa-download fa-fw"></i> Download</a></li>
-                            <li id="nav-btm-news"><a href="/news/"><i class="fa fa-newspaper-o fa-fw"></i> News</a></li>
+                            <li id="nav-btm-downloads"><a href="http://freecadweb.org/wiki/?title=Download"><i class="fa fa-download fa-fw"></i> Download</a></li>
+                            <li id="nav-btm-news"><a href="http://forum.freecadweb.org/index.php"><i class="fa fa-newspaper-o fa-fw"></i> News</a></li>
                         </ul>
                     </div>
                     <div class="column third">
                         <ul class="nav-bottom">
-                            <li id="nav-btm-about"><a href="/about/"><i class="fa fa-info-circle fa-fw"></i> About GIMP</a></li>
+                            <li id="nav-btm-about"><a href="http://freecadweb.org/wiki/?title=About_FreeCAD"><i class="fa fa-info-circle fa-fw"></i> About GIMP</a></li>
                             <li id="nav-btm-docs"><a href="/docs/"><i class="fa fa-book fa-fw"></i> Documentation</a></li>
                             <li id="nav-btm-donating"><a href="/donating/"><i class="fa fa-money fa-fw"></i> Donate</a></li>
                         </ul>
                     </div>
                     <div class="column third">
                         <ul class="nav-bottom">
-                            <li id="nav-btm-develop"><a href="/develop/"><i class="fa fa-code fa-fw"></i> Get Involved</a></li>
+                            <li id="nav-btm-develop"><a href="http://freecadweb.org/wiki/?title=Help_FreeCAD"><i class="fa fa-code fa-fw"></i> Get Involved</a></li>
                             <li id="nav-btm-tutorials"><a href="/tutorials/"><i class="fa fa-graduation-cap fa-fw"></i> Tutorials</a></li>
 
 
@@ -363,9 +363,9 @@
 
                     <div class='column third'>
                         <ul>
-                            <li><a href='/features/'>Features</a></li>
-                            <li><a href='/release-notes/'>Release Notes</a></li>
-                            <li><a href='http://wiki.gimp.org/index.php/Main_Page'>Wiki</a></li>
+                            <li><a href='http://freecadweb.org/wiki/?title=Feature_list'>Features</a></li>
+                            <li><a href='http://www.freecadweb.org/wiki/index.php?title=Release_notes_0.16'>Release Notes</a></li>
+                            <li><a href='http://freecadweb.org/wiki/index.php?title=Main_Page'>Wiki</a></li>
                         </ul>
                     </div>
 
@@ -388,10 +388,10 @@
 
                 <div class="row clearfix bottom">
                     <div class="column half flow-opposite">
-                        <a href="/feeds/atom.xml">GIMP News Feed</a> | <a href="/webmasters.html">Contacting Us</a>
+                        <a href="http://forum.freecadweb.org/index.php">Contacting Us</a>
                     </div>
                     <div class="column half">
-                        &copy; 2001-2015 <a href="/team.html">The GIMP Team</a>
+                        &copy; 2001-2015 <a href="http://freecadweb.org/wiki/index.php?title=Contributors">The FreeCAD Team</a>
                     </div>
                 </div>
             </div>
