--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>FreeCAD - An opensource 3D Modeler</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" href="theme/images/logo-freecad-16.png" type="image/png" />
+        <link rel="icon" href="theme/images/freecad-16px.png" type="image/png" />
         <link rel="stylesheet" type="text/css" href="theme/css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="theme/css/grid.css" />
         <link rel="stylesheet" type="text/css" href="theme/css/freecad.css" />
@@ -20,11 +20,11 @@
 
         <meta itemprop='url' content='http://freecadweb.org/' />
         <meta itemprop='name' content='FreeCAD - An Open Source 3D Modeler Program' />
-        <meta itemprop='image' content='https://github.com/wood-galaxy/Homepage/blob/gh-pages/theme/images/freecad-big.png' />
+        <meta itemprop='image' content='https://github.com/wood-galaxy/Homepage/blob/gh-pages/theme/images/freecad-300px.png' />
 
         <meta property='og:url' content='http://freecadweb.org/' />
         <meta property='og:title' content='FreeCAD' />
-        <meta property='og:image' content='https://github.com/wood-galaxy/Homepage/blob/gh-pages/theme/images/freecad-big.png' />
+        <meta property='og:image' content='https://github.com/wood-galaxy/Homepage/blob/gh-pages/theme/images/freecad-300px.png' />
         <meta property='og:type' content='website' />
         <meta property='og:site_name' content='FreeCAD' />
 
@@ -34,7 +34,7 @@
 
         <nav id="menu">
             <ul>
-                <li id='freecad-home'><a href="/"><img src='theme/images/logo-freecad.png' id='menuFreeCAD' style='width:25px;height:20px;' alt='FreeCAD Logo'> FreeCAD</a></li>
+                <li id='freecad-home'><a href="/"><img src='theme/images/freecad-128px.png' id='menuFreeCAD' style='width:20px;height:20px;' alt='FreeCAD Logo'> FreeCAD</a></li>
                 <li><a href="http://freecadweb.org/wiki/?title=Download"><i class="fa fa-download"></i> Download</a></li>
                 <li><a href="http://forum.freecadweb.org/"><i class="fa fa-newspaper-o"></i> Forum</a></li>
                   <li><a href="http://freecadweb.org/wiki/?title=About_FreeCAD">About <span class="caps">FreeCAD</span></a></li>
@@ -78,14 +78,14 @@
 <header id="banner" class="body clearfix">
     <div class="container">
                 <div class="intro row">
-
-                    <img id='WilberLogo' src="theme/images/freecad-big.png" alt="GIMP Wilber" width='200' height='150'/>
+                    
+                    <img id='WilberLogo' src="theme/images/freecad-300px.png" alt="GIMP Wilber" style="width:200px;height:200px;" />
                     <h1>
                         <a href="/">FreeCAD</a>
                     </h1>
                     <div class='introInfo'>
-                        <span id='gFirst'>OPEN SOURCE</span>
-                        <span id='gSecond'>3D MODELLER</span>
+                        <span id='gFirst'></span>
+                        <span id='gSecond'></span>
                         <span id='gThird'>
                             <a href="/downloads/" title="Download FreeCAD!">
                                 <span id="DLButton"><i class="fa fa-download"></i> DOWNLOAD <span id='ver'>0.16</span></span>
@@ -338,7 +338,7 @@
                 <div class="row clearfix">
                     <div class="column third">
                         <ul class="nav-bottom">
-                            <li id='nav-btm-gimp-home'><a href="/"><img src='theme/images/freecad.svg' style='width:25px;height:20px;' id='footerWilber' alt='Tiny Wilber'> FreeCAD</a></li>
+                            <li id='nav-btm-freecad-home'><a href="/"><img src='theme/images/freecad.svg' style='width:25px;height:20px;' id='footerWilber' alt='Tiny Wilber'> FreeCAD</a></li>
                             <li id="nav-btm-downloads"><a href="http://freecadweb.org/wiki/?title=Download"><i class="fa fa-download fa-fw"></i> Download</a></li>
                             <li id="nav-btm-news"><a href="http://forum.freecadweb.org/index.php"><i class="fa fa-newspaper-o fa-fw"></i> News</a></li>
                         </ul>
