--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="container">
                 <div class="intro row">
                     
-                    <img id='WilberLogo' src="theme/images/freecad-300px.png" alt="GIMP Wilber" style="width:200px;height:200px;" />
+                    <img id='WilberLogo' src="theme/images/freecad-300px.png" alt="GIMP Wilber"/>
                     <h1>
                         <a href="/">FreeCAD</a>
                     </h1>
@@ -281,6 +281,18 @@
                         <img src="theme/images/Inkscape_Logo.svg.png" alt="Inkscape Logo" />
                     </a>
                     <h4><a href="https://inkscape.org" title="Inkscape">Inkscape</a></h4>
+                </div>
+                <div class='column third'>
+                    <a href="http://librecad.org" title="LibreCAD">
+                        <img src="theme/images/librecad.png" alt="LibreCAD Logo" />
+                    </a>
+                    <h4><a href="http://librecad.org" title="LibreCAD">LibreCAD</a></h4>
+                </div>
+                <div class='column third'>
+                    <a href="https://www.blender.org/" title="Blender">
+                        <img src="theme/images/blender.png" alt="Blender Logo" />
+                    </a>
+                    <h4><a href="https://www.blender.org/" title="Blender">Blender</a></h4>
                 </div>
             </div>
         </div>
